[tool.poetry]
name = "text2video"
version = "0.1.0"
description = "A collaborative, learning AI system that transforms text, documents, and media into high-quality videos through intelligent multi-agent coordination"
authors = ["Stefanos Antaris <antaris.stefanos@gmail.com>"]
readme = "README.md"
packages = [{include = "text2video"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.0"
crewai = "^0.1.0"
autogen = "^0.2.0"
langgraph = "^0.0.10"
pinecone-client = "^2.2.4"
torch = "^2.1.0"
numpy = "^1.24.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
transformers = "^4.35.0"
scikit-learn = "^1.3.0"
openai = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"
pylint = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 